Prevent y-axis scrollbar in QuickSelect on Windows

--- a/src/components/QuickSelect/QuickSelect.sass
+++ b/src/components/QuickSelect/QuickSelect.sass
@@ -32,7 +32,8 @@
     background: #ffe3a1
     border-radius: 0.25em
     border: solid 2px #b68000
-    overflow: scroll
+    overflow-x: scroll
+    overflow-y: hidden
     padding: .5em
     position: relative
 
